--- a/literature.bib
+++ b/literature.bib
@@ -27,7 +27,7 @@ publisher = {Oracle America},
 url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	}
 	
-@inproceedings{10.1145/2509578.2509581,
+@inproceedings{VMRule,
 	author = {W\"{u}rthinger, Thomas and Wimmer, Christian and W\"{o}\ss{}, Andreas and Stadler, Lukas and Duboscq, Gilles and Humer, Christian and Richards, Gregor and Simon, Doug and Wolczko, Mario},
 	title = {One VM to Rule Them All},
 	year = {2013},
@@ -75,7 +75,7 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 }
 
 @article{wuerthSelf,
-	author = {Wuerthinger, Thomas and Wöß, Andreas and Stadler, Lukas and Duboscq, Gilles and Simon, Doug and Wimmer, Christian},
+	author = {W\"{u}rthinger, Thomas and Wöß, Andreas and Stadler, Lukas and Duboscq, Gilles and Simon, Doug and Wimmer, Christian},
 	year = {2013},
 	month = {01},
 	pages = {73-82},
@@ -83,4 +83,36 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	volume = {48},
 	journal = {ACM SIGPLAN Notices},
 	doi = {10.1145/2480360.2384587}
+}
+
+@inproceedings{ChambOpti,
+	author = {Hölzle, Urs and Chambers, Craig and Ungar, David},
+	year = {1991},
+	month = {07},
+	pages = {21-38},
+	title = {Optimizing Dynamically-Typed Object-Oriented Languages With Polymorphic Inline Caches.},
+	isbn = {3-540-54262-0},
+	doi = {10.1007/BFb0057013}
+}
+
+@article{FutaPart,
+	author = {Futamura, Yoshihiko},
+	year = {1999},
+	month = {12},
+	pages = {381-391},
+	title = {Partial Evaluation of Computation Process--An Approach to a Compiler-Compiler},
+	volume = {12},
+	journal = {Higher-Order and Symbolic Computation},
+	doi = {10.1023/A:1010095604496}
+}
+
+@inproceedings{ChambDebug,
+	author = {Hölzle, Urs and Chambers, Craig and Ungar, David},
+	year = {1992},
+	month = {07},
+	pages = {32-43},
+	title = {Debugging Optimized Code with Dynamic Deoptimization.},
+	volume = {27},
+	journal = {Sigplan Notices - SIGPLAN},
+	doi = {10.1145/143103.143114}
 }
