first draft for ECMA and current module state
first draft of Graaljs (short)
first draft of ECMAScript modules until current state

--- a/literature.bib
+++ b/literature.bib
@@ -106,13 +106,35 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	doi = {10.1023/A:1010095604496}
 }
 
-@inproceedings{ChambDebug,
-	author = {Hölzle, Urs and Chambers, Craig and Ungar, David},
-	year = {1992},
-	month = {07},
-	pages = {32-43},
-	title = {Debugging Optimized Code with Dynamic Deoptimization.},
-	volume = {27},
-	journal = {Sigplan Notices - SIGPLAN},
-	doi = {10.1145/143103.143114}
+@online{Graaljs,
+	title = {GraalVM JavaScript Implementation},
+	url = {https://www.graalvm.org/reference-manual/js/},
+	urldate = {2021-03-31}
+}
+
+@online{GraaljsComp,
+	title = {JavaScript Compatibility},
+	url = {https://www.graalvm.org/reference-manual/js /JavaScriptCompatibility/},
+	urldate = {2021-03-31}
+}
+
+@online{kangax1,
+	author = {Kangax and Webbedspace and Pushkarev, Denis},
+	title = {ECMAScript compatibility table},
+	url = {kangax.github.io/compat-table/es2016plus},
+	urldate = {2021-03-31}
+}
+
+@online{kangax2,
+	author = {Kangax and Webbedspace and Pushkarev, Denis},
+	title = {ECMAScript compatibility table},
+	url = {kangax.github.io/compat-table/esnext},
+	urldate = {2021-03-31}
+}
+
+@online{gitTC,
+	author = {Harband, Jordan and others},
+	title = {ECMAScript proposals},
+	url = {https://github.com/tc39/proposals},
+	urldate = {2021-03-31}
 }
