--- a/contents/02_Background.tex
+++ b/contents/02_Background.tex
@@ -77,7 +77,7 @@ The node rewriting process shown in figure \ref{fig:trufNR} happens at various s
 One note on the compilation process: The compiler uses as said aggressive optimization methods. This operation is successful for stable ASTs. Then compilation techniques like method inlining and eliminating interpreter dispatch code can be performed. This technique is called partial evaluation.\\
 In addition to type specialization truffle offers so called polymorphic inline caches. \cite{ChambOpti} An inline cache itself is simply caching a method from a former lookup at call site. In Truffle inline caches are built by chaining nodes which check for cached target matches which are then executed. At a predefined chain length the chain gets replaced by a polymorphic node handling all operations.\\
 As discussed in the JVM section program loading often requires resolution. An implemented truffle language can cache resolved targets at run time by replacing an unresolved node with its resolved version. Thus further resolutions of this node are prevented which leads to an optimized version of the AST.\\
-This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the Graal compiler. If Graal is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the Graal compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation. \cite{FutaPart} As stated in section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version. \cite{ChambDebug}
+This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the Graal compiler. If Graal is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the Graal compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation. \cite{FutaPart} As stated in section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version. \cite{ChambDeopt}
 
 In conclusion the Graal project aims at simplifying language implementations and application programming while also trying to have a performant run time. The simplification comes from introducing a framework for implementing languages as AST interpreters which can run on top of any JVM. The performance comes especially from running the AST interpreter on top of the GraalVM which uses various techniques to bring run time performance to higher levels.
 %\begin{tikzpicture}[nodes={draw, circle}, ->, minimum size=2cm, level distance = 2.5cm, sibling distance = 2.5cm]
@@ -95,8 +95,17 @@ In conclusion the Graal project aims at simplifying language implementations and
 %\node[below=.3cm of u,fill=lightblue, label=right:{Number}] (n) {N};
 %\end{tikzpicture}
 \section{Graal.Js}
+The Graal.Js project is an AST interpreter on top of Truffle. It is in full compliance of the newest ECMAScript 2020 language specification \cite{kangax1, GraaljsComp} and growing support of the technical committee 39 (TC39) proposals for future ECMAScript language specifications. \cite{kangax2, gitTC}  The runtime can execute JavaScript and Node.js applications with the previous discussed benefits of the Graal technology stack. \cite{Graaljs} As a recap the most notable ones are performance and polyglot programming support with multithreading support.
 
 \section{ECMAScript modules}
+With ECMAScript 6 the language got modules making it possible to divide code up into multiple files. Although this possibility has been around in JavaScript before, it was implemented by external libraries and not an inherent specified feature. The ability to import modules as needed came with a rise in source code size in regular JavaScript programs. When the language started out it was not unusual to have a one-line .js (JavaScript) file. As the code size rose the necessity of modules came with it which led to a multitude of concurring solutions. As script concatenation as the basic step meant manual building and testing the method could only be used in simple projects while more difficult ones started using module loaders. Those in turn could also become complicated for larger code bases. To overcome these problems so called module bundlers, like Babel, could be used to generate the needed JavaScript code at build time. Thus the code includes all dependencies in a single concatenated file. The specification of modules in ECMAScript bundled these efforts into one concept and gave implicit module support by the language. With this specification performance of module loading was pushed towards engine implementation.\\
+In a short note to avert term mixup. ECMAScript is a language specification for script languages. The actual code written is in JavaScript and this language is then run via engines in browsers on computers. So in hard terms an ECMAScript specification does not need to be fully supported by a particular browser and single features sometimes are left out but in general engine implementation follows the ECMAScript specification leading to the specification's features in JavaScript sourcecode.\\
+
 \subsection{Current State}
+In a broad sense modules at current state read like regular scripts with the difference of them being in strict-mode only and possible usage of imports and exports. The benefits are separate files with self-contained functionality, sharing of those files between different projects, diminishing naming conflicts, obvious naming conflicts and the robustness that comes with shared open source. But what are modules in the context of JavaScript in detail?\\
+As a module is run in strict mode all declared variables, functions and classes are private and cannot be accessed from the outside. Only those top-level items that are explicitly exported by the keyword \emph{export} can be used from a script importing the module. This is then done by the keyword \emph{import} either the whole module or explicitly named items which can also be aliased.\\
+As modules have to be loaded and are sometimes scattered throughout the web, deferring module loading is a default setting. Another note is the caching of modules. A module is only executed the first time it gets imported. All other scripts importing the module are given the already evaluated exports. This also means that a change in one of the exports is visible to all importing scripts.\\
+This standard unfortunately left out the possibility to add inline modules into a script which results in modules just containing one exported function. This results into unnecessary files which could be avoided by inlining the module into the original script. This exact feature is discussed in the next section.
 
 \subsection{Proposal: Module blocks}
+
