--- a/literature.bib
+++ b/literature.bib
@@ -138,3 +138,17 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	url = {https://github.com/tc39/proposals},
 	urldate = {2021-03-31}
 }
+
+@online{gitMB,
+	author = {Ehrenberg, Daniel and Surma},
+	title = {JS Module Blocks},
+	url = {https://github.com/tc39/proposal-js-module-blocks},
+	urldate = {2021-03-31}
+}
+
+@online{ecma,
+	editor = {Guo, Shu-yu and Ficarra, Michael and Gibbons, Kevin},
+	title = {ECMAScript 2022 Language Specification},
+	url = {https://tc39.es/ecma262/},
+	urldate = {2021-03-31}
+}
